--- a/CodeProject.GenericHandler/CodeProject.GenericHandler.csproj
+++ b/CodeProject.GenericHandler/CodeProject.GenericHandler.csproj
@@ -55,6 +55,7 @@
     <Content Include="CookiesDemo.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="jquery.js" />
+    <Content Include="PerformanceTest.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -82,6 +83,7 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Demo\Address.cs" />
+    <Compile Include="Demo\OtherAttribute.cs" />
     <Compile Include="Demo\PostalCode.cs" />
     <Compile Include="Demo\Person.cs" />
     <Compile Include="HttpVerbsHandler.ashx.cs">
@@ -92,6 +94,16 @@
     </Compile>
     <Compile Include="MyFirstHandler.ashx.cs">
       <DependentUpon>MyFirstHandler.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="PerformanceTest.aspx.cs">
+      <DependentUpon>PerformanceTest.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PerformanceTest.aspx.designer.cs">
+      <DependentUpon>PerformanceTest.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PerformanceTestHandler.ashx.cs">
+      <DependentUpon>PerformanceTestHandler.ashx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -113,6 +125,9 @@
       <Name>App.Utilities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="PerformanceTestHandler.ashx" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
@@ -123,8 +138,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>14406</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost/CodeProject.GenericHandler</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
